Added README.md and fixed api for update form
