# src/types/form.ts
@@ -1,16 +1,4 @@
 export interface IFormCreationParam {
-    name: string;
-    formsAppEnvironmentId: number;
-    description: string;
-    organisationId: string;
-    elements: any[];
-    isAuthenticated: boolean;
-    submissionEvents: any[];
-    postSubmissionAction: string;
-    formsAppIds: number[];
-}
-export interface IFormUpdateParam {
-    id: number;
     name?: string;
     formsAppEnvironmentId?: number;
     description?: string;
@@ -20,4 +8,7 @@ export interface IFormUpdateParam {
     submissionEvents?: any[];
     postSubmissionAction?: string;
     formsAppIds?: number[];
+}
+export interface IFormUpdateParam extends IFormCreationParam {
+    id: number;
 }
